2005-10-08  Janis Johnson  <janis187@us.ibm.com>

        Partial backport from mainline
	2004-05-04 Paolo Bonzini  <bonzini@gnu.org>
		   Richard Henderson  <rth@redhat.com>
	* c-common.c (vector_types_convertible_p): New function.
	* c-common.h: Declare it.
	* c-typeck.c (digest_init): Use it.

2005-10-07  James E Wilson  <wilson@specifix.com>

	PR target/23644
	* doc/invoke.texi (IA-64 Options, item -mtune): Renamed from
	-mtune-arch.

2005-10-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23985
	Back-port 2004-08-19  Richard Henderson  <rth@redhat.com>
	* config/arm/arm.c (arm_gen_load_multiple): Use
	adjust_automodify_address.  Take base memory and offset instead
	of unchanging/struct/scalar bits.
	(arm_gen_store_multiple): Likewise.
	(arm_gen_movstrqi): Use adjust_automodify_address.
	* config/arm/arm-protos.h: Update decls.
	* config/arm/arm.md (load_multiple): Update arm_gen_load_multiple call.
	(store_multiple): Similarly.

2005-09-29  Alan Modra  <amodra@bigpond.net.au>

	PR target/24102
	* config/rs6000/rs6000.md (floatdisf2_internal2): Correct range
	check for numbers that need no bit twiddle.

2005-09-09  Richard Guenther  <rguenther@suse.de>

	PR c/20239
	* cppinit.c (cpp_read_main_file): Avoid segfaulting on
	NULL pfile->map.

2005-09-09  Richard Guenther  <rguenther@suse.de>

	PR c++/23624
	* fold-const.c (fold): Check truth_value_p before calling
	invert_truthvalue.

2005-09-08  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	Backport from mainline
	2005-09-01  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	* c-decl.c (diagnose_mismatched_decls):  With -Wredundant-decls,
	do not issue warning for a variable definition following
	a declaration.

2005-09-02  Richard Sandiford  <richard@codesourcery.com>

	PR c/22061
	* c-decl.c (push_parm_decl): Push and pop x_dont_save_pending_sizes_p
	around the call to grokdeclarator.  Call grokdeclarator with the
	field set to 0.
	(store_parm_decls): Always store the pending_sizes in cfun.